--- a/spin upd/spin.html
+++ b/spin upd/spin.html
@@ -211,7 +211,7 @@
             <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 h-full flex flex-col justify-center relative z-10">
                 <!-- Main Headline -->
                 <h2 class="text-5xl md:text-6xl font-extrabold text-white max-w-4xl mb-8 leading-tight">
-                    PFG Lauds Jigawa&#39;s Progress in Irrigation Projects | Newskeeper..
+                     Sustainable Power and Irrigation for Nigeria Project (SPIN)
                 </h2>
                 
                 <!-- Buttons -->
